// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBoxGroup custom theme 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 jImhHp"
>
  <div
    class="StyledBox-sc-13pk1d4-0 iUBVl StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 iVFNAQ"
      label="first-label"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 eUgRdO StyledCheckBox-sc-1dbk5ju-6 bWiGFS"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dxOFzI"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 jMHXSN StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 gmfmIo"
        />
      </div>
      <span>
        first-label
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 dwFxbl"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 iVFNAQ"
      label="second-label"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 eUgRdO StyledCheckBox-sc-1dbk5ju-6 bWiGFS"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dxOFzI"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 jMHXSN StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 gmfmIo"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup defaultValue renders 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jImhHp"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 kAKeln StyledCheckBoxGroup-sc-2nhc5d-0"
      role="group"
    >
      <label
        class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 iVFNAQ"
        label="First"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 eUgRdO StyledCheckBox-sc-1dbk5ju-6 bWiGFS"
        >
          <input
            checked=""
            class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dxOFzI"
            type="checkbox"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 jrmzgF StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 gmfmIo"
          >
            <svg
              class="StyledCheckBox__StyledCheckBoxIcon-sc-1dbk5ju-0 caYxBM"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
            >
              <path
                d="M6,11.3 L10.3,16 L18,6.2"
                fill="none"
              />
            </svg>
          </div>
        </div>
        <span>
          First
        </span>
      </label>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 fNTNlK"
      />
      <label
        class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 iVFNAQ"
        label="Second"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 eUgRdO StyledCheckBox-sc-1dbk5ju-6 bWiGFS"
        >
          <input
            class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dxOFzI"
            type="checkbox"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 jMHXSN StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 gmfmIo"
          />
        </div>
        <span>
          Second
        </span>
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CheckBoxGroup disabled renders 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 jImhHp"
>
  <div
    class="StyledBox-sc-13pk1d4-0 kAKeln StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 kHUgtp"
      disabled=""
      label="First"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 eUgRdO StyledCheckBox-sc-1dbk5ju-6 bWiGFS"
        disabled=""
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 iDmfOM"
          disabled=""
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 jMHXSN StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 gmfmIo"
          disabled=""
        />
      </div>
      <span>
        First
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 fNTNlK"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 kHUgtp"
      disabled=""
      label="Second"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 eUgRdO StyledCheckBox-sc-1dbk5ju-6 bWiGFS"
        disabled=""
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 iDmfOM"
          disabled=""
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 jMHXSN StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 gmfmIo"
          disabled=""
        />
      </div>
      <span>
        Second
      </span>
    </label>
  </div>
  <div
    class="StyledBox-sc-13pk1d4-0 kAKeln StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 kHUgtp"
      disabled=""
      label="First"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 eUgRdO StyledCheckBox-sc-1dbk5ju-6 bWiGFS"
        disabled=""
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 iDmfOM"
          disabled=""
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 jMHXSN StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 gmfmIo"
          disabled=""
        />
      </div>
      <span>
        First
      </span>
    </label>
  </div>
  <div
    class="StyledBox-sc-13pk1d4-0 kAKeln StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 kHUgtp"
      disabled=""
      label="First"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 eUgRdO StyledCheckBox-sc-1dbk5ju-6 bWiGFS"
        disabled=""
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 iDmfOM"
          disabled=""
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 jMHXSN StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 gmfmIo"
          disabled=""
        />
      </div>
      <span>
        First
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup initial value renders 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 jImhHp"
>
  <div
    class="StyledBox-sc-13pk1d4-0 kAKeln StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 iVFNAQ"
      label="Maui"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 eUgRdO StyledCheckBox-sc-1dbk5ju-6 bWiGFS"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dxOFzI"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 jMHXSN StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 gmfmIo"
        />
      </div>
      <span>
        Maui
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 fNTNlK"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 iVFNAQ"
      label="Jerusalem"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 eUgRdO StyledCheckBox-sc-1dbk5ju-6 bWiGFS"
      >
        <input
          checked=""
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dxOFzI"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 jrmzgF StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 gmfmIo"
        >
          <svg
            class="StyledCheckBox__StyledCheckBoxIcon-sc-1dbk5ju-0 caYxBM"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="M6,11.3 L10.3,16 L18,6.2"
              fill="none"
            />
          </svg>
        </div>
      </div>
      <span>
        Jerusalem
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 fNTNlK"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 iVFNAQ"
      label="Wuhan"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 eUgRdO StyledCheckBox-sc-1dbk5ju-6 bWiGFS"
      >
        <input
          checked=""
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dxOFzI"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 jrmzgF StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 gmfmIo"
        >
          <svg
            class="StyledCheckBox__StyledCheckBoxIcon-sc-1dbk5ju-0 caYxBM"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="M6,11.3 L10.3,16 L18,6.2"
              fill="none"
            />
          </svg>
        </div>
      </div>
      <span>
        Wuhan
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup labelKey 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 jImhHp"
>
  <div
    class="StyledBox-sc-13pk1d4-0 kAKeln StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 iVFNAQ"
      label="first-label"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 eUgRdO StyledCheckBox-sc-1dbk5ju-6 bWiGFS"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dxOFzI"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 jMHXSN StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 gmfmIo"
        />
      </div>
      <span>
        first-label
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 fNTNlK"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 iVFNAQ"
      label="second-label"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 eUgRdO StyledCheckBox-sc-1dbk5ju-6 bWiGFS"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dxOFzI"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 jMHXSN StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 gmfmIo"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup onChange 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 jImhHp"
>
  <div
    class="StyledBox-sc-13pk1d4-0 kAKeln StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 iVFNAQ"
      label="first-label"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 eUgRdO StyledCheckBox-sc-1dbk5ju-6 bWiGFS"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dxOFzI"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 jrmzgF StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 gmfmIo"
        >
          <svg
            class="StyledCheckBox__StyledCheckBoxIcon-sc-1dbk5ju-0 caYxBM"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="M6,11.3 L10.3,16 L18,6.2"
              fill="none"
            />
          </svg>
        </div>
      </div>
      <span>
        first-label
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 fNTNlK"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 iVFNAQ"
      label="second-label"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 eUgRdO StyledCheckBox-sc-1dbk5ju-6 bWiGFS"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dxOFzI"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 jMHXSN StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 gmfmIo"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup onClick for check and uncheck a CheckBox 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 jImhHp"
>
  <div
    class="StyledBox-sc-13pk1d4-0 kgxPVP StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
    tabindex="0"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 iVFNAQ"
      label="first-label"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 eUgRdO StyledCheckBox-sc-1dbk5ju-6 bWiGFS"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dxOFzI"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 jrmzgF StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 gmfmIo"
        >
          <svg
            class="StyledCheckBox__StyledCheckBoxIcon-sc-1dbk5ju-0 caYxBM"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="M6,11.3 L10.3,16 L18,6.2"
              fill="none"
            />
          </svg>
        </div>
      </div>
      <span>
        first-label
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 fNTNlK"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 iVFNAQ"
      label="second-label"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 eUgRdO StyledCheckBox-sc-1dbk5ju-6 bWiGFS"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dxOFzI"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 jMHXSN StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 gmfmIo"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup onClick for check and uncheck a CheckBox 2`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 jImhHp"
>
  <div
    class="StyledBox-sc-13pk1d4-0 kgxPVP StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
    tabindex="0"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 iVFNAQ"
      label="first-label"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 eUgRdO StyledCheckBox-sc-1dbk5ju-6 bWiGFS"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dxOFzI"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 jMHXSN StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 gmfmIo"
        />
      </div>
      <span>
        first-label
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 fNTNlK"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 iVFNAQ"
      label="second-label"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 eUgRdO StyledCheckBox-sc-1dbk5ju-6 bWiGFS"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dxOFzI"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 jMHXSN StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 gmfmIo"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup options renders 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 jImhHp"
>
  <div
    class="StyledBox-sc-13pk1d4-0 kAKeln StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 iVFNAQ"
      label="First"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 eUgRdO StyledCheckBox-sc-1dbk5ju-6 bWiGFS"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dxOFzI"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 jMHXSN StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 gmfmIo"
        />
      </div>
      <span>
        First
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 fNTNlK"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 iVFNAQ"
      label="Second"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 eUgRdO StyledCheckBox-sc-1dbk5ju-6 bWiGFS"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dxOFzI"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 jMHXSN StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 gmfmIo"
        />
      </div>
      <span>
        Second
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup value renders 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 jImhHp"
>
  <div
    class="StyledBox-sc-13pk1d4-0 kAKeln StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 iVFNAQ"
      label="First"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 eUgRdO StyledCheckBox-sc-1dbk5ju-6 bWiGFS"
      >
        <input
          checked=""
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dxOFzI"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 jrmzgF StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 gmfmIo"
        >
          <svg
            class="StyledCheckBox__StyledCheckBoxIcon-sc-1dbk5ju-0 caYxBM"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="M6,11.3 L10.3,16 L18,6.2"
              fill="none"
            />
          </svg>
        </div>
      </div>
      <span>
        First
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 fNTNlK"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 iVFNAQ"
      label="Second"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 eUgRdO StyledCheckBox-sc-1dbk5ju-6 bWiGFS"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dxOFzI"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 jMHXSN StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 gmfmIo"
        />
      </div>
      <span>
        Second
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup valueKey 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 jImhHp"
>
  <div
    class="StyledBox-sc-13pk1d4-0 kAKeln StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 iVFNAQ"
      label="first-label"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 eUgRdO StyledCheckBox-sc-1dbk5ju-6 bWiGFS"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dxOFzI"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 jMHXSN StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 gmfmIo"
        />
      </div>
      <span>
        first-label
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 fNTNlK"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 iVFNAQ"
      label="second-label"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 eUgRdO StyledCheckBox-sc-1dbk5ju-6 bWiGFS"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dxOFzI"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 jMHXSN StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 gmfmIo"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;
